--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,65 @@
-.App {
-  text-align: center;
+.app {
+  background-color: blanchedalmond;
+  border-radius: 5%;
+  min-height: 80vh;
+  width: 60%;
+  margin: 20px auto;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  background-color: rgb(251, 14, 156);
+}
+.crossed {
+  text-decoration: line-through 2px rgb(251, 14, 156);
+  background-color: #f0f0f0;
+}
+ul,li {
+  list-style-type: none;
+  padding: 5px;
+  margin: 0;
+  font-family: 'Source Serif Pro', serif;
+  font-size: 25px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+
+}
+.add {
+
+  border-radius: 30%;
+  border: none;
+  padding: 10px;
+  margin: 10px;
+  background-color: rgb(181, 225, 252);
+  font-family: 'Source Serif Pro', serif;
+  font-size: 25px;
+  width: 100%;
+}
+.delete {
+
+  border-radius: 30%;
+  border: none;
+  padding: 10px;
+  margin: 10px;
+  background-color: rgb(251, 14, 156);
+  font-family: 'Source Serif Pro', serif;
+  font-size: 25px;
+  width: 100%;
+}
+input {
+  flex: 1;
+  padding: 8px;
+  margin: 10px;
+  font-family: 'Source Serif Pro', serif;
+  font-size: 20px;
+}
+img {
+  margin: 20px;
+  border-radius: 30%;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+h1 {
+  font-family: 'Source Serif Pro', serif;
 }
